# CourseWork_datastructure2025_text2_printmanager

./: .gitignore  2.cpp  CMakeLists.txt  PrintManager.pro  README.md  build.sh  done.csv  moc_mainwindow.cpp  printmanager.h  running.csv
